# apexfunds-lakehouse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260701_01_create_control_plane.py
api/: Dockerfile  __init__.py
api/app/: dependencies.py  main.py  schemas.py
docs/: README.md  architecture.md  implementation-plan.md  roadmap.md  spec.md  stack.md
docs/roadmap/: README.md  level-1-foundation.md  level-2-analytics.md  level-3-operations.md  level-4-productization.md
orchestration/: __init__.py
orchestration/dags/: __init__.py  common.py  cvm_bronze_dag.py  cvm_discovery_dag.py  cvm_raw_ingestion_dag.py  cvm_replay_by_competence_dag.py  cvm_silver_gold_dag.py  cvm_tasks.py
scripts/: print_settings.py
src/apex_lakehouse/: __init__.py  config.py  exceptions.py  logging.py  paths.py  time.py  types.py
tests/integration/: test_control_plane_repository_integration.py
tests/unit/: test_airflow_dag_imports.py  test_api_main.py  test_config.py  test_control_plane_records.py  test_control_plane_repository.py  test_control_plane_service.py  test_cvm_airflow_tasks.py  test_cvm_bronze_parser.py  test_cvm_bronze_service.py  test_cvm_bronze_workflow.py  test_cvm_discovery_models.py  test_cvm_discovery_parser.py  test_cvm_discovery_service.py  test_cvm_discovery_source.py  test_cvm_discovery_state.py  test_cvm_discovery_workflow.py  test_cvm_gold_service.py  test_cvm_gold_transformer.py  test_cvm_gold_workflow.py  test_cvm_raw_downloader.py  test_shared_core.py  (+16 more)
(+52 files in other folders)
