[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "apex-lakehouse"
version = "0.1.0"
description = "Production-first lakehouse scaffold for Brazilian funds intelligence."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Rasknikov", email = "rasknikovvssl@gmail.com" }
]
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "boto3>=1.35.0,<2.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]
dev = [
  "mypy>=1.11.0,<2.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<0.7.0",
]

[project.urls]
Repository = "https://github.com/rasknikov/apexfunds-lakehouse"
Documentation = "https://github.com/rasknikov/apexfunds-lakehouse/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_lakehouse"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "api", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
pretty = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
exclude = [
  "^\\.local/",
  "^\\.pytest_cache/",
]
